Quick CSS z-index fix for the action container

--- a/cheaty.css
+++ b/cheaty.css
@@ -4,6 +4,7 @@
 
 #cheaty_action_button_container {
     position: absolute;
+    z-index: 999 !important;
     background-color: black;
     padding:5px;
     border-radius:5px;
